fix spacing

--- a/css/table-twbs.css
+++ b/css/table-twbs.css
@@ -54,6 +54,7 @@
 }
 .ns-page-size-text {
   padding-top: 6px;
+  margin-right: 10px;
   min-width: 55px;
   width: 20%;
 }
